2010-10-23  Glenn Morris  <rgm@gnu.org>

	* term/ns-win.el (xw-defined-colors):
	* term/x-win.el (xw-defined-colors): Make docs identical to w32-win.

	* term/pc-win.el (x-select-enable-clipboard):
	* term/x-win.el (x-select-enable-clipboard):
	* w32-vars.el (x-select-enable-clipboard): Make doc-strings identical.

	* comint.el (comint-password-prompt-regexp): Make it less vague.
	Bump version.

	* help-fns.el (doc-file-to-man, doc-file-to-info): New commands.

	* help.el (finder-by-keyword): Remove unnecessary autoload.

2010-10-22  Glenn Morris  <rgm@gnu.org>

	* loadup.el: Unconditionally load float-sup.
	* paren.el (show-paren-delay):
	* emacs-lisp/float-sup.el:
	* emulation/cua-base.el (cua-prefix-override-inhibit-delay):
	* obsolete/lazy-lock.el (lazy-lock-defer-time, lazy-lock-stealth-nice)
	(lazy-lock-stealth-verbose): Assume float support.
	* ps-print.el: Assume float support on Emacs.
	* emacs-lisp/timer.el (timer-next-integral-multiple-of-time):
	Remove non-float branch.

	* emacs-lisp/autoload.el (batch-update-autoloads): Update for
	src/Makefile no longer being pre-processed.

2010-10-22  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/find-func.el (find-library): Use test-completion.

2010-10-21  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* newcomment.el (comment-dwim): Fix the intentation in the doc string.

010-10-21  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp-sh.el (tramp-do-file-attributes-with-stat): Do not use
	space in stat format string.
	(tramp-send-command): Unset $PS1 when using here documents, in
	order not to get several prompts.
	(tramp-get-inline-coding): Return `nil' in case of errors.

2010-10-21  Daiki Ueno  <ueno@unixuser.org>

	* hexl.el (hexl-mode, hexl-mode-exit):
	Tweak revert-buffer-function to inhibit auto-mode-alist (Bug#7252).
	(hexl-revert-buffer-function): New function.
	(hexl-before-revert-hook, hexl-after-revert-hook): Abolish.

2010-10-19  Alan Mackenzie  <acm@muc.de>
