@@ -1,3 +1,7 @@
+2010-10-23  Glenn Morris  <rgm@gnu.org>
+
+	* xdisp.c (syms_of_xdisp) <auto-hscroll-mode>: Sync doc with Lisp.
+
 2010-10-23  Eli Zaretskii  <eliz@gnu.org>
 
 	Implement mouse highlight for bidi-reordered lines.
@@ -28278,10 +28282,10 @@ See ChangeLog.10 for earlier changes.
 
 ;; Local Variables:
 ;; coding: utf-8
-;; add-log-time-zone-rule: t
 ;; End:
 
-    Copyright (C) 2007, 2008, 2009, 2010  Free Software Foundation, Inc.
+  Copyright (C) 2007, 2008, 2009, 2010
+    Free Software Foundation, Inc.
 
   This file is part of GNU Emacs.
 
@@ -28298,4 +28302,3 @@ See ChangeLog.10 for earlier changes.
   You should have received a copy of the GNU General Public License
   along with GNU Emacs.  If not, see <http://www.gnu.org/licenses/>.
 
-;; arch-tag: dfb6ad96-1550-4905-9e53-d2059ee84c40
